# 112servis-2026-turnuva

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  reset_db.sql
backend/migrations/: 0001_init.sql  0002_mappools.sql  0003_single_placement.sql  0004_stage_publish.sql  0005_pool_maps.sql  0006_category_slots.sql  0007_map_notes.sql  0008_inline_beatmap_metadata.sql  0009_category_color.sql
backend/src/: auth.rs  config.rs  db.rs  error.rs  jwt.rs  main.rs  mods.rs  role.rs
backend/src/db/: admin.rs  mappool.rs  mod.rs  user.rs
backend/src/discord_api/: mod.rs  user.rs
backend/src/handlers/: admin.rs  auth.rs  discord.rs  mappool.rs  mod.rs  osu.rs  user.rs
backend/src/osu_api/: attributes.rs  beatmap.rs  mod.rs  token.rs  user.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  AuthContext.jsx  PlayerContext.jsx  adminTab.js  api.js  lastStage.js  main.jsx  roles.js  useCollapsed.js
frontend/src/components/: DiscordMark.jsx  EditableNote.css  EditableNote.jsx  InlineEdit.css  InlineEdit.jsx  MapCard.css  MapCard.jsx  MiniPlayer.css  MiniPlayer.jsx  NavBar.css  NavBar.jsx  PoolCategories.jsx
frontend/src/pages/: AdminPage.css  AdminPage.jsx  DiscordLoginPage.jsx  LandingPage.css  LandingPage.jsx  LoginPage.jsx  MapPoolPage.jsx  ProfilePage.jsx  PublicPoolPage.jsx  UsersPage.css  UsersPage.jsx
frontend/src/styles/: base.css  buttons.css  layout.css  pool.css
frontend/src/utils/: mods.js
